# SimpleRedisClient

./: .gitignore  CMakeLists.txt  README.md
config/: default_configuration.cfg
include/: common.hpp
include/Consumer/: IMessageProcessor.hpp  IObservableConsumer.hpp  JsonMessageProcessorImpl.hpp  Message.hpp  RedisConsumer.hpp
include/Consumer/ConsumerGroups/: RedisBrokerConsumer.hpp
include/Consumer/RedisConsumerUtils/: redis_consumer_utils.hpp
include/Monitoring/: ProcessedMessagesMonitor.hpp
include/Parsing/: config_parser.hpp  input_parser.hpp
src/: format_and_build.sh  redis_client.cpp
src/Consumer/: JsonMessageProcessorImpl.cpp  RedisConsumer.cpp
src/Consumer/ConsumerGroups/: RedisBrokerConsumer.cpp
src/Publisher/: publish.py
tests/: test_json_message_processor.cpp  test_redis_consumer_apis.cpp
